# gdatalog

./: .gitignore  README.md  gdatalog_cli.py  pyproject.toml  pytest.ini  requirements.txt
examples/: bacterial_lineage_persistence.asp  colorable-with-smart.asp  colorable.asp  deep_cave_exploration.asp  earthquakes-and-burglaries-with-smart.asp  earthquakes-and-burglaries.asp  flip-coin.asp  flip-coins-until-tail.asp  flip-coins-until-tails-with-small-with-names.asp  flip-coins-until-tails-with-smart.asp  flip-coins-with-smart.asp  flip-dimes-then-quarters-with-aggregate.asp  flip-dimes-then-quarters.asp  lottery_system.asp  mass-examples.asp  measure.asp  meteors.asp  particle_decay_chain.asp  pigeon_poisson.asp  random-walk.asp  sequential_system_degradation.asp  the_miracle_week.asp  viral_outbreak.asp  virus-spread.asp  warehouse_delivery.asp
gdatalog/: cli.py  delta_terms.py  main.py  program.py  server.py  utils.py
tests/gdatalog/: test_delta_terms.py  test_program.py
