[tool.poetry]
name = "gdatalog"
version = "0.2.2"
description = "Genereative Datalog with stable negation"
authors = ["Mario Alviano <mario.alviano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.1"
typeguard = "^4.1.5"
valid8 = "^5.1.2"
dumbo-asp = "^0.3.6"
distlib = "^0.3.6"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
