[tool.poetry]
name = "gdatalog"
version = "0.3.5"
description = "Genereative Datalog with stable negation"
authors = ["Mario Alviano <mario.alviano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
rich = "^13.7.1"
typeguard = "^4.2.1"
valid8 = "^5.1.2"
distlib = "^0.3.8"
scipy = "^1.13.0"
dumbo-asp = "^0.3.8"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
