[tool.poetry]
name = "gdatalog"
version = "0.4.1"
description = "Genereative Datalog with stable negation"
authors = ["Mario Alviano <mario.alviano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
typeguard = "^4.2.1"
valid8 = "^5.1.2"
distlib = "^0.4.0"
scipy = "^1.13.0"
dumbo-asp = "^0.4.1"
fastapi = "^0.134.0"
requests = "^2.32.3"
uvicorn = "^0.41.0"
scipy-stubs = "~=1.17.1"

[tool.poetry.scripts]
gdatalog = "gdatalog.cli:run_app"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
